<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_challenges_completed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_completed" />

    <item
        android:id="@+id/navigation_challenges_authored"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_authored" />

</menu>
